Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -70,7 +70,7 @@ header.bk-header p {
     color:@font-swatch8-color;
     line-height:@font-swatch8-line-height;
     letter-spacing: @font-swatch8-letter-spacing;
-    font-size: @font-swatch8-font-size;           
+    font-size: @font-swatch8-font-size;
 }
 
 .widget.feature .feature-bgimg .content {
@@ -465,6 +465,7 @@ header.bk-header {
         float: right;
         min-height: 50px;
         padding:16px 0px;
+        width: 80%;
         @media @tablet {
             background-color: transparent;
         }
@@ -474,7 +475,6 @@ header.bk-header {
             }
         }
         ul {
-            float: right;
             text-align: center;
             padding: 0;
             @media @tablet {
